--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,7 +4,7 @@ twig:
     #form_themes: ['bootstrap_4_Horizontal_layout.html.twig']
     globals:
         app_environement: '%env(APP_ENV)%'
-        appName: 'Nevrety'
+        appName: 'Nevrity'
         decRCCM: '11RA 23258'
         devise: 'Unité - Travail - Progrès'
         pays: 'France'
