Traduction page details factures

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -11,6 +11,7 @@ twig:
         appEmail: 'planning@nevrity-transports.com'
         siteweb: 'www.nevrity-transports.com'
         appPhone: '+33 (0)5 56 36 03 32'
+        appAdresse: '121 AVENUE VICTOR HUGO PARAY-VIEILLE-POSTE 91550'
         currency: ' €'
         ashtag: '#'
         appConcepteur: "BAYE Conception"
